# sgbd-vector-database

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: init_collection.py
src/: __init__.py  app.py  config.py  embedding.py  qdrant_client_setup.py  rag.py  search.py  snapshot_restore.py
